{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1642,
  "lineage": "d5e92fec-5352-7f58-aca0-8c54abea2eff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f0d747bc64e3bfe",
            "domain": "vpc",
            "id": "eipalloc-06f0d747bc64e3bfe",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-195-255-55.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.255.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0995064488b705c72",
            "domain": "vpc",
            "id": "eipalloc-0995064488b705c72",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-249-199-39.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.199.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_for_operation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3fd0f5d33134a76",
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:instance/i-0615f8b8cd326c3c2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-for-ssm",
            "id": "i-0615f8b8cd326c3c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095a8e92fa936b58e",
            "private_dns": "ip-10-0-65-119.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.65.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0273320c8cb21f3eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059098f272b8e9a4f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0766fa4c566610b3d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_for_ssm",
            "aws_subnet.private_0",
            "module.ec2_for_ssm_role.aws_iam_role.default",
            "module.ec2_for_ssm_role.data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:internet-gateway/igw-005790baabe0e3965",
            "id": "igw-005790baabe0e3965",
            "owner_id": "108824073404",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic-terraform2",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:loadbalancer/app/example/e7a107f1039cd305",
            "arn_suffix": "app/example/e7a107f1039cd305",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-1225162801.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:loadbalancer/app/example/e7a107f1039cd305",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05b2202c528ddaf2a",
              "sg-064f618cd424b1299",
              "sg-09ed7971603b0f89d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6a68329e5699e9f"
              },
              {
                "subnet_id": "subnet-0f3c51bf2de3c0360"
              }
            ],
            "subnets": [
              "subnet-0b6a68329e5699e9f",
              "subnet-0f3c51bf2de3c0360"
            ],
            "vpc_id": "vpc-075e74317dc62bbdf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/d82afa4429e6492e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これはHTTPのレスポンスです",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/d82afa4429e6492e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:loadbalancer/app/example/e7a107f1039cd305",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/b5490337ac111e56",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:108824073404:certificate/bcf803b6-f3da-44ed-a763-cb58378ab0df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これはHTTPSのレスポンスです",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/b5490337ac111e56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:loadbalancer/app/example/e7a107f1039cd305",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_acm_certificate_validation.example",
            "aws_lb.example",
            "aws_route53_record.example",
            "aws_route53_record.example_certificate",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/4f18c0e8c0b23581",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/4f18c0e8c0b23581",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:loadbalancer/app/example/e7a107f1039cd305",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:targetgroup/example/dc45dcd2b0ff62ba",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener-rule/app/example/e7a107f1039cd305/b5490337ac111e56/b561e501cf407736",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener-rule/app/example/e7a107f1039cd305/b5490337ac111e56/b561e501cf407736",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:listener/app/example/e7a107f1039cd305/b5490337ac111e56",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_acm_certificate_validation.example",
            "aws_lb.example",
            "aws_lb_listener.https",
            "aws_lb_target_group.example",
            "aws_route53_record.example",
            "aws_route53_record.example_certificate",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:targetgroup/example/dc45dcd2b0ff62ba",
            "arn_suffix": "targetgroup/example/dc45dcd2b0ff62ba",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:108824073404:targetgroup/example/dc45dcd2b0ff62ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f0d747bc64e3bfe",
            "association_id": "eipassoc-015050d276ec7294b",
            "connectivity_type": "public",
            "id": "nat-0174a16d2c995d207",
            "network_interface_id": "eni-091c2b10c126a2e29",
            "private_ip": "10.0.1.159",
            "public_ip": "52.195.255.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f3c51bf2de3c0360"
          },
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0995064488b705c72",
            "association_id": "eipassoc-0e2dcb037af248133",
            "connectivity_type": "public",
            "id": "nat-0752cb2812f125eac",
            "network_interface_id": "eni-04c15955ca34ebf43",
            "private_ip": "10.0.2.135",
            "public_ip": "54.249.199.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6a68329e5699e9f"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b388348cae5250341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0174a16d2c995d207",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b388348cae525034",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f3f7c38383a78cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0752cb2812f125eac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f3f7c38383a78cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005790baabe0e3965",
            "id": "r-rtb-0a39bcdce52a3db4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a39bcdce52a3db4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:route-table/rtb-0b388348cae525034",
            "id": "rtb-0b388348cae525034",
            "owner_id": "108824073404",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:route-table/rtb-07f3f7c38383a78cb",
            "id": "rtb-07f3f7c38383a78cb",
            "owner_id": "108824073404",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:route-table/rtb-0a39bcdce52a3db4a",
            "id": "rtb-0a39bcdce52a3db4a",
            "owner_id": "108824073404",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ce99461c4606899",
            "route_table_id": "rtb-0b388348cae525034",
            "subnet_id": "subnet-059098f272b8e9a4f"
          },
          "dependencies": [
            "aws_route_table.private_0",
            "aws_subnet.private_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062224367bd17b687",
            "route_table_id": "rtb-07f3f7c38383a78cb",
            "subnet_id": "subnet-01e71c821b7417a3a"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d444f64578b2b863",
            "route_table_id": "rtb-0a39bcdce52a3db4a",
            "subnet_id": "subnet-0f3c51bf2de3c0360"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0494ef461c5958a65",
            "route_table_id": "rtb-0a39bcdce52a3db4a",
            "subnet_id": "subnet-0b6a68329e5699e9f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:subnet/subnet-059098f272b8e9a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059098f272b8e9a4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108824073404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:subnet/subnet-01e71c821b7417a3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e71c821b7417a3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108824073404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:subnet/subnet-0f3c51bf2de3c0360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3c51bf2de3c0360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "108824073404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:subnet/subnet-0b6a68329e5699e9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6a68329e5699e9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "108824073404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:vpc/vpc-075e74317dc62bbdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066129b9f132d61a7",
            "default_route_table_id": "rtb-0537db3bbb5100069",
            "default_security_group_id": "sg-0766fa4c566610b3d",
            "dhcp_options_id": "dopt-0c560d81ad92975a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075e74317dc62bbdf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0537db3bbb5100069",
            "owner_id": "108824073404",
            "tags": {
              "Name": "exapmple"
            },
            "tags_all": {
              "Name": "exapmple"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-057d7283669bf5676",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-057d7283669bf5676",
            "ingress": [],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-300515319",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-057d7283669bf5676",
            "security_group_rule_id": "sgr-056b8e555edabe13d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2022051282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057d7283669bf5676",
            "security_group_rule_id": "sgr-054667fe1924fc8bb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-064f618cd424b1299",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-064f618cd424b1299",
            "ingress": [],
            "name": "http-redirect-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3842777204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064f618cd424b1299",
            "security_group_rule_id": "sgr-03b8643367b63cf6f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2222032967",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064f618cd424b1299",
            "security_group_rule_id": "sgr-0f36d18ff5ce2d56b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-09ed7971603b0f89d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09ed7971603b0f89d",
            "ingress": [],
            "name": "http-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-723049869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09ed7971603b0f89d",
            "security_group_rule_id": "sgr-0e83b0a4f5915f31d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2692556886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ed7971603b0f89d",
            "security_group_rule_id": "sgr-03b1233a9427f2b6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-05b2202c528ddaf2a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05b2202c528ddaf2a",
            "ingress": [],
            "name": "https-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2400536204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05b2202c528ddaf2a",
            "security_group_rule_id": "sgr-029411f04e86bad53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4036281814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b2202c528ddaf2a",
            "security_group_rule_id": "sgr-08fb2444b1ab73731",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-0f3ee8b7b3777e346",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f3ee8b7b3777e346",
            "ingress": [],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1548065430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f3ee8b7b3777e346",
            "security_group_rule_id": "sgr-09560baf2a42b88ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mysql_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1906005610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f3ee8b7b3777e346",
            "security_group_rule_id": "sgr-03183ab554ef789f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.mysql_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-0d31bc1d0ae3e3dd1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d31bc1d0ae3e3dd1",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4265925472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d31bc1d0ae3e3dd1",
            "security_group_rule_id": "sgr-0190f7aed50a3bd02",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3162515839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d31bc1d0ae3e3dd1",
            "security_group_rule_id": "sgr-0ab0697908361903e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:108824073404:security-group/sg-039dbdc96a678c436",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-039dbdc96a678c436",
            "ingress": [],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "108824073404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e74317dc62bbdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-572100625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-039dbdc96a678c436",
            "security_group_rule_id": "sgr-0c2462b6fbf2bf53f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.redis_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6379,
            "id": "sgrule-44002107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039dbdc96a678c436",
            "security_group_rule_id": "sgr-080c83f1b8e99be4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.redis_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}